objects/CheckIn_CMV__Visit_Compliance__mdt.object
<CustomObject>
    <fields>
        <fullName>CheckIn_CMV__Allow_Non_compliant_Visits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Non-compliant Visits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckIn_CMV__Max_Distance__c</fullName>
        <inlineHelpText>In Kilometers</inlineHelpText>
        <label>Max Distance</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CheckIn_CMV__Navigate_to_Visit_on_Check_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Navigate to Visit on Check In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckIn_CMV__Navigate_to_Visit_on_Check_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Navigate to Visit on Check Out</label>
        <type>Checkbox</type>
    </fields>
    <label>Visit Compliance</label>
    <pluralLabel>Visit Compliances</pluralLabel>
</CustomObject>